app/assets/stylesheets/global.css.scss
@import "compass/reset";
@import "common";

body {
    background: image-url('/assets/background-tile.jpg');
    background-position: 0px 101px;
}

em { color: $dark-orange; }

p { line-height: 1.5em; }

#canvas {
    width: 100%;
    height: 100%;
}

#header-wrapper {
    background: image-url('/assets/curve.png') repeat-x;
    width: 100%;
    z-index: 100;
    position: relative;
}

header {
    @include centered;
    height: $header-height;
    padding: 20px 0;
    h1 {
        float: left;
    }
}

nav {
    float: right;
    margin-top: 20px;
    ul { list-style-type: none; }
    li {
        float: left;
        &:last-child a { border-right: none; }
        }
    a {
        text-decoration: none;
        @include nav-text;
        display: block;
        height: 20px;
        padding: 0 10px;
        border-right: 3px solid $blue;
    }
}

#content-wrapper {
    background: image-url('/assets/background-top.jpg') repeat-x;
}

#content {
    @include centered;
    margin-top: -40px;
    position: relative;
    z-index: 0;
}

footer {
    @include centered;
    @include footer-text;
    a { @include footer-link-text }
    h3 {
        @include footer-header-text;
    }
    h4 {
        @include footer-subheader-text;
        margin: 10px 0;
    }
    #contact {
        @include column(16);
    }
    #careers {
        @include column(8, true);
    }
    li { margin: 5px 0; }
    p { margin: 10px 0; }
}

#content-footer { @include clearfix; }

@include sticky-footer(160px, "#content-canvas", "#content-footer", "footer");

#charlottesville, #boulder {
    span {
        display: block;
        margin: 5px 0;
    }
}

#charlottesville { @include column(8) }
#boulder { @include column(8, true) }

#logo {
    text-indent: -9999em;
    display: block;
    width: 200px;
    height: 61px;
    background: image-url('/assets/logo.png') no-repeat;
}

